syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.globalproperties.input";

import "properties/properties.proto";
import "reports/reports.proto";
import "google/protobuf/any.proto";


message GlobalPropertyIdInput {
    google.protobuf.Any id = 1;
}

message GlobalPropertyDimensionInput {
    GlobalPropertyIdInput globalPropertyId = 1;
    double assignmentTime = 2;
    repeated google.protobuf.Any values = 3;
}

message GlobalPropertiesPluginDataInput {
    repeated PropertyDefinitionMapInput globalPropertyDefinitinions = 1;
    repeated PropertyValueMapInput globalPropertyValues = 2;
}

message GlobalPropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated GlobalPropertyIdInput includedProperties = 3;
    repeated GlobalPropertyIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}
